refactor: add padding for save icon in badge

--- a/src/plugins/data/public/ui/filter_bar/_global_filter_expression_item.scss
+++ b/src/plugins/data/public/ui/filter_bar/_global_filter_expression_item.scss
@@ -25,3 +25,7 @@
 .globalFilterExpression__flexItem {
   margin: $euiSizeXS;
 }
+
+.globalFilterExpression__saveIcon {
+  margin-right: $euiSizeXS;
+}
