Add full screen ability

--- a/src/plugins/kibana_react/public/code_editor/editor.scss
+++ b/src/plugins/kibana_react/public/code_editor/editor.scss
@@ -27,4 +27,17 @@
       display: none;
     }
   }
+
+  &__isFullScreen {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+
+  &__controls {
+    top: 24px;
+    right: 24px;
+    position: absolute;
+    z-index: 1000
+  }
 }
