--- a/x-pack/plugins/lens/public/metric_visualization/expression.scss
+++ b/x-pack/plugins/lens/public/metric_visualization/expression.scss
@@ -39,7 +39,7 @@
     }
     &.titleSizeXS {
       .lnsMetricExpression__title {
-        font-size: $euiFontSizeS;
+        font-size: $euiFontSizeXS;
       }
       .lnsMetricExpression__value {
         font-size: $euiFontSizeXS * 2;
