Design PR feedback

--- a/x-pack/plugins/lens/public/metric_visualization/expression.scss
+++ b/x-pack/plugins/lens/public/metric_visualization/expression.scss
@@ -21,17 +21,14 @@
     }
   }
 
-  .lnsMetricExpression_container_scale {
+  .lnsMetricExpression__containerScale {
     display: flex;
     align-items: center;
     flex-direction: column;
-    &.rowDirection {
-      flex-direction: row;
-    }
-    &.alignStart {
+    &.alignLeft {
       align-items: start;
     }
-    &.alignEnd {
+    &.alignRight {
       align-items: end;
     }
     &.alignCenter {
