Control initial widths by percentage

--- a/x-pack/plugins/triggers_actions_ui/public/application/sections/alerts_list/components/alerts_list.scss
+++ b/x-pack/plugins/triggers_actions_ui/public/application/sections/alerts_list/components/alerts_list.scss
@@ -17,6 +17,13 @@
   }
 }
 
+.euiDataGridHeaderCell {
+  font-size: 12px;
+}
+
+.euiDataGridRowCell:not(.euiDataGridRowCell--lastColumn) {
+  border-right: none;
+}
 
 /**
  * 1. Only visually hide the action, so that it's still accessible to screen readers.
