Design Cleanup from moving Data VIew selector

--- a/src/plugins/discover/public/application/main/components/sidebar/discover_sidebar.scss
+++ b/src/plugins/discover/public/application/main/components/sidebar/discover_sidebar.scss
@@ -73,6 +73,5 @@
 
 .dscSidebar__indexPatternSwitcher {
   min-width: 0;
-  margin-left: 16px !important;
-  margin-bottom: 10px !important;
+  padding: $euiSizeS 0 $euiSizeS $euiSizeS;
 }
