--- a/src/plugins/data/public/ui/filter_bar/_global_filter_group.scss
+++ b/src/plugins/data/public/ui/filter_bar/_global_filter_group.scss
@@ -31,6 +31,16 @@
   background-image: url("data:image/svg+xml,%0A%3Csvg width='28px' height='28px' viewBox='0 0 28 28' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='#{hexToRGB($euiColorLightShade)}'%3E%3Crect x='14' y='27' width='14' height='1'%3E%3C/rect%3E%3C/g%3E%3C/svg%3E");
 }
 
+.globalFilterGroup--hasFilters {
+  min-height: $euiSizeXXL;
+}
+
+.globalFilterGroup__filterBar {
+  position: absolute;
+  left: $euiSizeS;
+  right: $euiSizeS;
+}
+
 .globalFilterGroup__wrapper {
   line-height: 1; // Override kuiLocalNav & kuiLocalNavRow
   overflow: hidden;
