--- a/x-pack/plugins/triggers_actions_ui/public/application/sections/alerts_list/components/alerts_list.scss
+++ b/x-pack/plugins/triggers_actions_ui/public/application/sections/alerts_list/components/alerts_list.scss
@@ -21,9 +21,9 @@
   font-size: 12px;
 }
 
-.euiDataGridRowCell:not(.euiDataGridRowCell--lastColumn) {
-  border-right: none;
-}
+// .euiDataGridRowCell:not(.euiDataGridRowCell--lastColumn) {
+//   border-right: none;
+// }
 
 /**
  * 1. Only visually hide the action, so that it's still accessible to screen readers.
