--- a/src/plugins/kibana_react/public/code_editor/editor.scss
+++ b/src/plugins/kibana_react/public/code_editor/editor.scss
@@ -28,16 +28,20 @@
     }
   }
 
+  &__controls {
+    top: 2px;
+    right: 16px;
+    position: absolute;
+    z-index: 1000
+  }
+
   &__isFullScreen {
     position: absolute;
     left: 0;
     top: 0;
-  }
-
-  &__controls {
-    top: 24px;
-    right: 24px;
-    position: absolute;
-    z-index: 1000
+    .kibanaCodeEditor__controls {
+      top: 24px;
+      right: 24px;
+    }
   }
 }
