--- a/src/plugins/kibana_react/public/code_editor/editor.scss
+++ b/src/plugins/kibana_react/public/code_editor/editor.scss
@@ -29,8 +29,8 @@
   }
 
   &__controls {
-    top: 2px;
-    right: 16px;
+    top: $euiSizeXS;
+    right: $euiSize;
     position: absolute;
     z-index: 1000
   }
@@ -40,8 +40,8 @@
     left: 0;
     top: 0;
     .kibanaCodeEditor__controls {
-      top: 24px;
-      right: 24px;
+      top: $euiSizeL;
+      right: $euiSizeL;
     }
   }
 }
