design changes for ignored options

--- a/src/plugins/controls/public/control_types/options_list/options_list.scss
+++ b/src/plugins/controls/public/control_types/options_list/options_list.scss
@@ -35,6 +35,10 @@
   font-weight: 300;
 }
 
+.optionsList__ignoredBadge {
+  margin-left: $euiSizeS;
+}
+
 .optionsList__selectionInvalid {
   text-decoration: line-through;
   color: $euiTextSubduedColor;
