Fix bug where clearing selections would cause unsaved changes. Displayed ignored selections in popover

--- a/src/plugins/controls/public/control_types/options_list/options_list.scss
+++ b/src/plugins/controls/public/control_types/options_list/options_list.scss
@@ -39,6 +39,10 @@
   margin-left: $euiSizeS;
 }
 
+.optionsList-control-ignored-selection-title {
+  padding-left: $euiSizeS;
+}
+
 .optionsList__selectionInvalid {
   text-decoration: line-through;
   color: $euiTextSubduedColor;
