--- a/src/plugins/data/public/ui/query_string_input/_query_bar.scss
+++ b/src/plugins/data/public/ui/query_string_input/_query_bar.scss
@@ -28,6 +28,11 @@
   }
 }
 
+.kbnQueryBar--textareaIcon {
+  margin-left: 8px;
+  align-self: center;
+}
+
 .kbnQueryBar__textarea {
   z-index: $euiZContentMenu;
   resize: none !important; // When in the group, it will autosize
