Improve the vertical separator

--- a/x-pack/plugins/lens/public/app_plugin/app.scss
+++ b/x-pack/plugins/lens/public/app_plugin/app.scss
@@ -39,7 +39,22 @@
   }
 }
 
-.lnsNavItem__goBack > span {
-  border-right: 1px solid $euiColorLightShade;
-  height: 70%;
+// Less-than-ideal styles to add a vertical divider after this button. Consider restructuring markup for better semantics and styling options in the future.
+.lnsNavItem__goBack {
+  @include euiBreakpoint('m', 'l', 'xl') {
+    margin-right: $euiSizeM;
+    position: relative;
+  }
+  &::after {
+    @include euiBreakpoint('m', 'l', 'xl') {
+      border-right: $euiBorderThin;
+      bottom: 0;
+      content: '';
+      display: block;
+      pointer-events: none;
+      position: absolute;
+      right: -$euiSizeS;
+      top: 0;
+    }
+  }
 }
