--- a/src/plugins/visualizations/public/visualize_app/utils/visualize_navigation.scss
+++ b/src/plugins/visualizations/public/visualize_app/utils/visualize_navigation.scss
@@ -1,4 +1,19 @@
-.visNavItem__goToLens > span {
-  border-right: 1px solid $euiColorLightShade;
-  height: 70%;
+// Less-than-ideal styles to add a vertical divider after this button. Consider restructuring markup for better semantics and styling options in the future.
+.visNavItem__goToLens {
+  @include euiBreakpoint('m', 'l', 'xl') {
+    margin-right: $euiSizeM;
+    position: relative;
+  }
+  &::after {
+    @include euiBreakpoint('m', 'l', 'xl') {
+      border-right: $euiBorderThin;
+      bottom: 0;
+      content: '';
+      display: block;
+      pointer-events: none;
+      position: absolute;
+      right: -$euiSizeS;
+      top: 0;
+    }
+  }
 }
