Add badge to the nav item level

--- a/src/plugins/navigation/public/top_nav_menu/_index.scss
+++ b/src/plugins/navigation/public/top_nav_menu/_index.scss
@@ -13,6 +13,6 @@
   margin-right: $euiSizeM;
 }
 
-.kbnTopNavMenu__betaBadgeGroup {
-  align-self: center;
+.kbnTopNavMenu__betaBadgeItem {
+  margin-left: $euiSizeXS;
 }
