add min-width to inputs for smaller screens

--- a/src/plugins/presentation_util/public/components/data_view_picker/data_view_picker.scss
+++ b/src/plugins/presentation_util/public/components/data_view_picker/data_view_picker.scss
@@ -1,5 +1,6 @@
 .presDataViewPicker__panel {
-    @include euiBreakpoint('m', 'l', 'xl') {
-      width: $euiFormMaxWidth;
-    }
+  min-width: $euiSizeXXL * 8;
+  @include euiBreakpoint('l', 'xl') {
+    width: $euiFormMaxWidth;
   }
+}
