--- a/src/plugins/shared_ux/public/components/no_data_views_page/assets/no_results_illustration.scss
+++ b/src/plugins/shared_ux/public/components/no_data_views_page/assets/no_results_illustration.scss
@@ -8,15 +8,11 @@
 
 @include euiBreakpoint('xs', 's') {
 
-  .dscNoResults__illustration > svg {
+  .noResults__illustration > svg {
     width: $euiSize * 12;
     height: auto;
     margin: 0 auto;
 
-  }
-
-  .dscNoResults__title {
-    text-align: center;
   }
 
 }
