Nest badge into the button level

--- a/src/plugins/navigation/public/top_nav_menu/_index.scss
+++ b/src/plugins/navigation/public/top_nav_menu/_index.scss
@@ -13,6 +13,11 @@
   margin-right: $euiSizeM;
 }
 
+.kbnTopNavMenu__betaBadgeWrapper {
+  display: flex;
+  align-items: center;
+}
+
 .kbnTopNavMenu__betaBadgeItem {
-  margin-left: $euiSizeXS;
+  margin-right: $euiSizeS;
 }
