--- a/src/plugins/navigation/public/top_nav_menu/_index.scss
+++ b/src/plugins/navigation/public/top_nav_menu/_index.scss
@@ -13,11 +13,15 @@
   margin-right: $euiSizeM;
 }
 
-.kbnTopNavMenu__betaBadgeWrapper {
-  display: flex;
-  align-items: center;
-}
-
 .kbnTopNavMenu__betaBadgeItem {
   margin-right: $euiSizeS;
+  vertical-align: middle;
+
+  button:hover &,
+  button:focus & {
+    text-decoration: underline;
+  }
+  button:hover & {
+    cursor: pointer;
+  }
 }
