--- a/src/plugins/dashboard/public/dashboard_top_nav/_dashboard_top_nav.scss
+++ b/src/plugins/dashboard/public/dashboard_top_nav/_dashboard_top_nav.scss
@@ -4,6 +4,6 @@
     position: sticky;
     z-index: $euiZLevel2;
     top: var(--euiFixedHeadersOffset, 0);
-    background: transparent;
+    background: $euiPageBackgroundColor;
   }
 }
