--- a/src/plugins/controls/public/options_list/components/options_list.scss
+++ b/src/plugins/controls/public/options_list/components/options_list.scss
@@ -73,7 +73,7 @@
     }
   }
 
-  .optionsList-control-ignore“d-selection-title {
+  .optionsList-control-ignored-selection-title {
     padding-left: $euiSizeS;
   }
 
