--- a/src/plugins/controls/public/options_list/components/options_list.scss
+++ b/src/plugins/controls/public/options_list/components/options_list.scss
@@ -16,7 +16,7 @@
     }
 
     .optionsList__filterValid {
-      font-weight: 500;
+      font-weight: $euiFontWeightMedium;
     }
 
     .optionsList__filterInvalid {
