--- a/src/plugins/controls/public/range_slider/components/range_slider.scss
+++ b/src/plugins/controls/public/range_slider/components/range_slider.scss
@@ -14,7 +14,7 @@
 }
 
 .rangeSliderAnchor__fieldNumber {
-  font-weight: $euiFontWeightBold;
+  font-weight: $euiFontWeightMedium;
   box-shadow: none;
   text-align: center;
   background-color: transparent;
@@ -27,7 +27,7 @@
   }
 
   &:placeholder-shown, &::placeholder {
-    font-weight: $euiFontWeightRegular;
+  font-weight: $euiFontWeightRegular;
     color: $euiTextSubduedColor;
     text-decoration: none;
   }
