--- a/src/core/public/styles/_base.scss
+++ b/src/core/public/styles/_base.scss
@@ -26,8 +26,9 @@
   margin-left: 320px; // Hard-coded for now -- @cchaos
 }
 
-.euiBody--hasFlyout[style*='padding-left: 248px'] .euiBottomBar {
-  margin-left: 248px; // Hard-coded for serverless sideNav
+// Add support for serverless nabbar
+.euiBody--hasFlyout .euiBottomBar {
+  margin-left: var(--euiCollapsibleNavOffset, 0);
 }
 
 // Temporary fix for EuiPageHeader with a bottom border but no tabs or padding
