--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/suggestion_panel.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/suggestion_panel.scss
@@ -23,7 +23,6 @@
 .lnsSuggestionPanel__button {
   position: relative; // Let the expression progress indicator position itself against the button
   flex: 0 0 auto;
-  width: $lnsSuggestionWidth !important; // sass-lint:disable-line no-important
   height: $lnsSuggestionHeight;
   margin-right: $euiSizeS;
   margin-left: $euiSizeXS / 2;
@@ -56,6 +55,10 @@
   &:hover {
     transform: none !important; // sass-lint:disable-line no-important
   }
+}
+
+.lnsSuggestionPanel__button-fixedWidth {
+  width: $lnsSuggestionWidth !important; // sass-lint:disable-line no-important
 }
 
 .lnsSuggestionPanel__suggestionIcon {
