modify side nav title avatar

--- a/packages/shared-ux/page/solution_nav/src/solution_nav.scss
+++ b/packages/shared-ux/page/solution_nav/src/solution_nav.scss
@@ -24,7 +24,7 @@ $euiSideNavEmphasizedBackgroundColor: transparentize($euiColorLightShade, .7);
   }
 
   &__titleAvatar {
-    margin-right: $euiSize;
+    margin-right: $euiSizeM;
     align-self: flex-start;
   }
 }
