fix sticky header attempt 1

--- a/src/core/public/_css_variables.scss
+++ b/src/core/public/_css_variables.scss
@@ -5,6 +5,10 @@
   --kbnHeaderOffset: var(--euiFixedHeadersOffset, 0);
   // total height of everything when the banner is present
   --kbnHeaderOffsetWithBanner: calc(var(--kbnHeaderBannerHeight) + var(--kbnHeaderOffset));
+
+  // height of the action menu in the header in serverless projects
+  // this variable is dynamically set when mounted
+  --kbnProjectHeaderAppActionMenuHeight: 0;
 }
 
 // Quick note: This shouldn't be mixed with Sass variable declarations,
