--- a/src/core/public/styles/rendering/_base.scss
+++ b/src/core/public/styles/rendering/_base.scss
@@ -19,7 +19,7 @@
   pointer-events: none;
   visibility: hidden;
   position: fixed;
-  top: var(--kbnAppHeadersOffset, 0);
+  top: var(--kbnAppHeadersOffset, var(--euiFixedHeadersOffset, 0));
   right: 0;
   bottom: 0;
   left: 0;
@@ -38,18 +38,11 @@
 .kbnBody {
   padding-top: var(--euiFixedHeadersOffset, 0);
 }
+
 // Conditionally override :root CSS fixed header variable. Updating `--euiFixedHeadersOffset`
 // on the body will cause all child EUI components to automatically update their offsets
-.kbnBody--projectActionMenuVisible {
-  --kbnAppHeadersOffset: calc(var(--kbnHeaderOffset) + var(--kbnProjectHeaderAppActionMenuHeight));
-}
 .kbnBody--hasHeaderBanner {
   --euiFixedHeadersOffset: var(--kbnHeaderOffsetWithBanner);
-  --kbnAppHeadersOffset: var(--kbnHeaderOffsetWithBanner);
-
-  &.kbnBody--projectActionMenuVisible {
-    --kbnAppHeadersOffset: calc(var(--kbnHeaderOffsetWithBanner) + var(--kbnProjectHeaderAppActionMenuHeight));
-  }
 
   // Offset fixed EuiHeaders by the top banner
   .euiHeader[data-fixed-header] {
@@ -63,15 +56,24 @@
   }
 }
 
-.kbnBody--chromeHidden {
-  --euiFixedHeadersOffset: 0;
-  &.kbnBody--projectActionMenuVisible {
-    --kbnAppHeadersOffset: 0;
+// Set a body CSS variable for the app container to use - calculates the total
+// height of all fixed headers + the sticky action menu toolbar
+.kbnBody--projectActionMenuVisible {
+  --kbnAppHeadersOffset: calc(var(--kbnHeaderOffset) + var(--kbnProjectHeaderAppActionMenuHeight));
+
+  &.kbnBody--hasHeaderBanner {
+    --kbnAppHeadersOffset: calc(var(--kbnHeaderOffsetWithBanner) + var(--kbnProjectHeaderAppActionMenuHeight));
   }
 }
-.kbnBody--chromeHidden.kbnBody--hasHeaderBanner {
-  --euiFixedHeadersOffset: var(--kbnHeaderBannerHeight);
+
+.kbnBody--chromeHidden {
+  --euiFixedHeadersOffset: 0;
+
+  &.kbnBody--hasHeaderBanner {
+    --euiFixedHeadersOffset: var(--kbnHeaderBannerHeight);
+  }
+
   &.kbnBody--projectActionMenuVisible {
-    --kbnAppHeadersOffset: var(--kbnHeaderBannerHeight);
+    --kbnAppHeadersOffset: var(--euiFixedHeadersOffset, 0);
   }
 }
