Update all instances of `--kbnAppHeadersOffset` to fall back to `--euiFixedHeadersOffset` if not set

--- a/src/core/public/_mixins.scss
+++ b/src/core/public/_mixins.scss
@@ -2,5 +2,9 @@
   // The `--kbnAppHeadersOffset` CSS variable is automatically updated by
   // styles/rendering/_base.scss, based on whether the Kibana chrome has a
   // header banner, app menu, and is visible or hidden
-  height: calc(100vh - var(--kbnAppHeadersOffset, 0) - #{$additionalOffset});
+  height: calc(
+    100vh
+    - var(--kbnAppHeadersOffset, var(--euiFixedHeadersOffset, 0))
+    - #{$additionalOffset}
+  );
 }
