Revert "Replace deprecated node-sass with sass (#161813)"
This reverts commit 87d5d6be262068d52d7125a6d75670d4c2c09ea2.

--- a/src/plugins/kibana_react/public/markdown/_markdown.scss
+++ b/src/plugins/kibana_react/public/markdown/_markdown.scss
@@ -14,7 +14,7 @@
 $kbnDefaultFontSize: 14px;
 
 @function canvasToEm($size) {
-  @return #{calc($size / $kbnDefaultFontSize)}em;
+  @return #{$size / $kbnDefaultFontSize}em;
 }
 
 .kbnMarkdown__body {
