--- a/packages/kbn-unified-field-list/src/containers/unified_field_list_sidebar/field_list_sidebar.scss
+++ b/packages/kbn-unified-field-list/src/containers/unified_field_list_sidebar/field_list_sidebar.scss
@@ -53,7 +53,7 @@
 
 .unifiedFieldListSidebar .unifiedFieldListItemButton {
   &.kbnFieldButton {
-    margin-bottom: calc($euiSizeXS / 2);
+    margin-bottom: $euiSizeXS / 2;
   }
 
   &.domDragDrop-isDraggable {
