--- a/src/plugins/controls/public/options_list/components/options_list.scss
+++ b/src/plugins/controls/public/options_list/components/options_list.scss
@@ -65,7 +65,7 @@
     }
 
     .optionsList__actionsRow {
-      margin: calc($euiSizeS / 2) 0 !important;
+      margin: ($euiSizeS / 2) 0 !important;
 
       .optionsList__actionBarDivider {
         height: $euiSize;
