--- a/x-pack/plugins/monitoring/public/components/status_icon/_status_icon.scss
+++ b/x-pack/plugins/monitoring/public/components/status_icon/_status_icon.scss
@@ -1,7 +1,7 @@
 .monStatusIcon {
   display: inline-block;
   margin-left: $euiSizeXS;
-  padding: calc($euiSizeXS / 2) $euiSizeS;
+  padding: ($euiSizeXS / 2) $euiSizeS;
   border-radius: $euiBorderRadius;
   color: $euiColorGhost;
   min-width: 1.9em;
