--- a/x-pack/plugins/upgrade_assistant/public/application/components/es_deprecation_logs/fix_deprecation_logs/deprecation_logging_toggle/_deprecation_logging_toggle.scss
+++ b/x-pack/plugins/upgrade_assistant/public/application/components/es_deprecation_logs/fix_deprecation_logs/deprecation_logging_toggle/_deprecation_logging_toggle.scss
@@ -3,5 +3,5 @@
 // them. With this selector we offset the difference so that the content
 // of the page doesnt jump when toggling between states.
 .upgToggleLoading > .upgLoadingItem {
-  margin: calc($euiSizeM / 2);
+  margin: $euiSizeM / 2;
 }
