All selections use same font weight

--- a/src/plugins/controls/public/options_list/components/options_list.scss
+++ b/src/plugins/controls/public/options_list/components/options_list.scss
@@ -15,13 +15,12 @@
       font-weight: $euiFontWeightRegular;
     }
 
-    .optionsList__filterValid {
+    .optionsList__filter {
       font-weight: $euiFontWeightMedium;
     }
 
     .optionsList__filterInvalid {
       color: $euiColorWarningText;
-      font-weight: $euiFontWeightRegular;
     }
 
     .optionsList__negateLabel {
