Skip fields_to_remove if an empty array

--- a/x-pack/plugins/integration_assistant/server/templates/pipeline.yml.njk
+++ b/x-pack/plugins/integration_assistant/server/templates/pipeline.yml.njk
@@ -108,7 +108,7 @@ processors:
       tag: rename_destination_as_organization_name
       target_field: destination.as.organization.name
       ignore_missing: true
-{% if fields_to_remove %}
+{% if fields_to_remove.length > 0 %}
   - remove:
       field: 
       {% for field in fields_to_remove %}
