feat(UnifiedSearch): add max-height for unified search query

--- a/src/plugins/unified_search/public/query_string_input/query_string_input.scss
+++ b/src/plugins/unified_search/public/query_string_input/query_string_input.scss
@@ -43,6 +43,7 @@
     overflow-x: auto;
     overflow-y: auto;
     white-space: normal;
+    max-height: calc(80vh - 100px);
   }
 
   &.kbnQueryBar__textarea--isSuggestionsVisible {
