--- a/src/plugins/chart_expressions/expression_xy/public/components/tooltip/tooltip.scss
+++ b/src/plugins/chart_expressions/expression_xy/public/components/tooltip/tooltip.scss
@@ -1,10 +1,11 @@
 .detailedTooltip {
-  @include euiToolTipStyle('s');
   pointer-events: none;
-  max-width: $euiSizeXL * 10;
-  overflow: hidden;
-  padding: $euiSizeS;
-
+  @include euiToolTipStyle('s');
+  & {
+    max-width: $euiSizeXL * 10;
+    overflow: hidden;
+    padding: $euiSizeS;
+  }
   table {
     table-layout: fixed;
     width: 100%;
