--- a/src/plugins/chart_expressions/expression_xy/public/components/tooltip/tooltip.scss
+++ b/src/plugins/chart_expressions/expression_xy/public/components/tooltip/tooltip.scss
@@ -1,7 +1,7 @@
 .detailedTooltip {
   pointer-events: none;
   @include euiToolTipStyle('s');
-  & {
+  & { // stylelint-disable-line no-duplicate-selectors
     max-width: $euiSizeXL * 10;
     overflow: hidden;
     padding: $euiSizeS;
