Opt in to the new method for spaces menu

--- a/x-pack/plugins/spaces/public/nav_control/components/spaces_menu.scss
+++ b/x-pack/plugins/spaces/public/nav_control/components/spaces_menu.scss
@@ -4,7 +4,7 @@
 
 .spcMenu__spacesList {
   @include euiYScrollWithShadows;
-  max-height: $euiSizeXL * 10;
+  & {max-height: $euiSizeXL * 10};
 }
 
 .spcMenu__searchFieldWrapper {
