Opt in to the new sass method for the interactive setup logo

--- a/src/plugins/interactive_setup/public/app.scss
+++ b/src/plugins/interactive_setup/public/app.scss
@@ -12,7 +12,7 @@
   @include kibanaCircleLogo;
   @include euiBottomShadowMedium;
 
-  margin-bottom: $euiSizeXL;
+  &{margin-bottom: $euiSizeXL};
 }
 
 .interactiveSetup__content {
