Fixing sass to opt into new method on space selector, login, access agreement

--- a/x-pack/plugins/security/public/authentication/access_agreement/access_agreement_page.scss
+++ b/x-pack/plugins/security/public/authentication/access_agreement/access_agreement_page.scss
@@ -8,8 +8,10 @@
 
 .secAccessAgreementPage__text {
   @include euiYScrollWithShadows;
-  max-height: 400px;
-  padding: $euiSize $euiSizeL 0;
+  & {
+    max-height: 400px;
+    padding: $euiSize $euiSizeL 0;
+  }
 }
 
 .secAccessAgreementPage__footer {
