--- a/x-pack/plugins/security/public/authentication/components/authentication_state_page/authentication_state_page.scss
+++ b/x-pack/plugins/security/public/authentication/components/authentication_state_page/authentication_state_page.scss
@@ -12,7 +12,9 @@
   @include kibanaCircleLogo;
   @include euiBottomShadowMedium;
 
-  margin-bottom: $euiSizeXL;
+  & {
+    margin-bottom: $euiSizeXL;
+  }
 }
 
 .secAuthenticationStatePage__content {
