--- a/x-pack/plugins/spaces/public/space_selector/space_selector.scss
+++ b/x-pack/plugins/spaces/public/space_selector/space_selector.scss
@@ -4,8 +4,10 @@
 
 .spcSelectorBackground {
   @include kibanaFullScreenGraphics;
-  z-index: -1;
-  pointer-events: none;
+  & {
+    z-index: -1;
+    pointer-events: none;
+  }
 }
 
 // Fix forced focus outline on text that isn't a link to just be an underline
