--- a/x-pack/plugins/security/public/authentication/login/components/login_form/login_form.scss
+++ b/x-pack/plugins/security/public/authentication/login/components/login_form/login_form.scss
@@ -25,8 +25,10 @@
   &:focus {
     @include euiFocusRing;
 
-    border-color: transparent;
-    border-radius: $euiBorderRadius;
+    & {
+      border-color: transparent;
+      border-radius: $euiBorderRadius;
+    }
 
     .secLoginCard__title {
       text-decoration: underline;
