--- a/x-pack/plugins/integration_assistant/server/templates/package_readme.md.njk
+++ b/x-pack/plugins/integration_assistant/server/templates/package_readme.md.njk
@@ -12,6 +12,6 @@ Please refer to the following [document](https://www.elastic.co/guide/en/ecs/cur
 
 | Field | Description | Type |
 |---|---|---|
-{% for field in data_stream.fields %}| {{ field.name }} | {{ field.description | default('Insert a description') }} | {{ field.type | default('Insert a type')}} |
+{% for field in data_stream.fields %}| {{ field.name }} | {{ field.description }} | {{ field.type }} |
 {% endfor %}
 {% endfor %}
