Splitting into 2 classes

--- a/x-pack/plugins/spaces/public/space_selector/space_selector.scss
+++ b/x-pack/plugins/spaces/public/space_selector/space_selector.scss
@@ -3,10 +3,12 @@
 }
 
 .spcSelectorBackground {
+  @include kibanaFullScreenGraphics;
+}
+
+.spcSelectorBackground__nonMixinAttributes {
   z-index: -1;
   pointer-events: none;
-
-  @include kibanaFullScreenGraphics;
 }
 
 // Fix forced focus outline on text that isn't a link to just be an underline
