--- a/src/plugins/unified_doc_viewer/public/components/doc_viewer_table/table.scss
+++ b/src/plugins/unified_doc_viewer/public/components/doc_viewer_table/table.scss
@@ -72,11 +72,11 @@
 }
 
 .kbnDocViewer__fieldsGrid {
-  &.euiDataGrid--noControls.euiDataGrid--bordersHorizontal .euiDataGridHeaderCell {
+  &.euiDataGrid--noControls.euiDataGrid--bordersHorizontal .euiDataGridHeader {
     border-top: none;
   }
 
-  &.euiDataGrid--headerUnderline .euiDataGridHeaderCell {
+  &.euiDataGrid--headerUnderline .euiDataGridHeader {
     border-bottom: $euiBorderThin;
   }
 
